--- a/src/Aplus/AplusDllCompiler/AplusDllCompiler.csproj
+++ b/src/Aplus/AplusDllCompiler/AplusDllCompiler.csproj
@@ -49,7 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArgumentParser.cs" />
     <Compile Include="AssemblyCreator.cs" />
+    <Compile Include="CodeConverter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
