--- a/src/Aplus/AplusDllCompiler/AplusDllCompiler.csproj
+++ b/src/Aplus/AplusDllCompiler/AplusDllCompiler.csproj
@@ -61,6 +61,11 @@
       <Name>AplusCore</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="demosource.ascii">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
